# obscure

./: CMakeLists.txt  LICENSE  LICENSE_USAGE.md  README.md
examples/: CMakeLists.txt  exampleSpoof.cpp
include/obscure/: def.h
include/obscure/core/: ExtendedFakeTeb.h  FakeCallstackAllocator.h  FakeExecutableRegion.h  FakePeb.h  ThreadSpoofer.h
src/: CMakeLists.txt
src/core/: CMakeLists.txt  ExtendedFakeTeb.cpp  FakeCallstackAllocator.cpp  FakeExecutableRegion.cpp  FakePeb.cpp  ThreadSpoofer.cpp
